<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/italian"
            android:checked="false"
            android:icon="@drawable/ic_airplay_black_24dp"
            android:title="@string/italian" />

        <item
            android:id="@+id/english"
            android:checked="false"
            android:icon="@drawable/ic_airplay_black_24dp"
            android:title="@string/english"/>

        <item
            android:id="@+id/mixed"
            android:checked="false"
            android:icon="@drawable/ic_airplay_black_24dp"
            android:title="@string/mixed"/>

        <item
            android:id="@+id/mylist"
            android:checked="false"
            android:icon="@drawable/ic_airplay_black_24dp"
            android:title="@string/mylist"/>

        <item
            android:id="@+id/favorite"
            android:checked="false"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite"/>


    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/About"
                    android:checked="false"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/about" />

                <item
                    android:id="@+id/Donate"
                    android:checked="false"
                    android:icon="@drawable/ic_credit_card_black_24dp"
                    android:title="@string/donate" />

                <item
                    android:id="@+id/Share"
                    android:checked="false"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/share" />

                <item
                    android:id="@+id/Bug"
                    android:checked="false"
                    android:icon="@drawable/ic_bug_report_black_24dp"
                    android:title="@string/bug_report" />

            </group>
        </menu>
    </item>


</menu>